2003-03-06  Serge Winitzki  <serge@cosmos.phy.tufts.edu>

	* bind/sciword.bind: update for 1.3.x 

2003-03-03  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* doc/LaTeXConfig.lyx.in: really get rid of iletter description

2003-03-03  PAP  <papasot@pythagoras.physics.upatras.gr>

	* layouts/kluwer.layout: update for 1.3.x compatibility

	* layouts/ijmpd.layout: re-add, since it only made it to 1.2.x.

	* doc/LaTeXConfig.lyx.in: add ijmpd

2003-02-28  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* layouts/llncs.layout: do not forget to define floats too

2003-02-27  Adrien Rebollo  <adrien.rebollo@gmx.fr>

	* examples/fr_Foils.lyx: new translation of example

2003-02-18  Juergen Spitzmueller  <j.spitzmueller@gmx.de>

	* layouts/scrclass.inc:
	* layouts/scrarticle.layout: KOMA update

2003-02-17  Juergen Spitzmueller  <j.spitzmueller@gmx.de>

	* templates/koma-letter2.lyx: 
	* layouts/scrlttr2.layout: new KOMA letter class
	* doc/LaTeXConfig.lyx.in: document this.

2003-02-14  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* chkconfig.ltx: information is in LaTeXConfig.lyx, not
	LyXConfig.lyx

	* configure.m4: fix detection of fax programs

2003-02-11  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* templates/elsart.lyx: 
	* layouts/elsart.layout: new class, adapted from work of Herbert
	Voss and Rod Pinna

2003-02-12  Tomasz Luczak  <tlu@technodat.com.pl>

	* layouts/mwart.cls:
	* layouts/mwbk.cls:
	* layouts/mwrep.cls: new classes. Adaptation of the base classes
	to polish typographical conventions.

2003-02-11  Angus Leeming  <leeming@lyx.org>
  
	* BasicLyX.pm: enable reLyX to recognise natbib citations.

	* MakePreamble.pm: if '\usepackage{natbib}' is found, activate
	LyX's natbib support.

	* reLyX/syntax.default: add natbib citation commands.

	* reLyX/RelyxTable.pm: provide support for 'm' column descriptors.

2003-02-11  Angus Leeming  <leeming@lyx.org>
  
	* reLyX/MakePreamble.pm: Output an accurate decription of what created