@@ -64,6 +64,8 @@ What's new
 - graphics that have been set to not display in LyX are no longer
   converted [bug #920]
 
+- fix converters for tgif format
+
 - fix bug where preview snippets would most of the time be processed twice
 
 - prevent a crash when generating previews if the user is not using a
