@@ -1,3 +1,7 @@
+2003-03-10  Michael Schmitt  <Michael.Schmitt@teststep.org>
+
+	* configure.m4: fix the tgif converters
+
 2003-03-06  Serge Winitzki  <serge@cosmos.phy.tufts.edu>
 
 	* bind/sciword.bind: update for 1.3.x 
